# jmabry.github.io

./: .gitignore  .gitmodules  .nojekyll  README.md  _config.yml  _quarto.yml  about.html  about.qmd  index.html  index.md  index.qmd  listings.json  robots.txt  search.json  sitemap.xml
.github/workflows/: jekyll-gh-pages.yml  publish.yml
blog/: Dockerfile  Gemfile  Makefile  entrypoint.sh
blog/site/: _config.yml  pyproject.toml
blog/site/_includes/head/: custom.html
blog/site/_pages/: about.md
blog/site/_posts/: 2021-09-14-MAB-post.md  2021-09-14-bain-post.md  2024-06-11-numpyro-masking-nbconvert.html  2024-06-11-numpyro-masking.md
playground/numpyro_masking/: 2024-06-11-numpyro-masking.ipynb  README.md  pyproject.toml
playground/numpyro_masking/.ipynb_checkpoints/: MaskHandlerExample-checkpoint.ipynb
posts/mab-post/: index.html  index.qmd
posts/numpyro-masking/: index.html  index.qmd
posts/template-projects/: index.html  index.qmd
site/: _config.yml
site/_posts/: 2024-06-04-welcome-to-jekyll.markdown
torch_hist/: Untitled.ipynb  pyproject.toml
