[tool.poetry]
name = "notebook-conversion-ppt"
version = "0.1.0"
description = ""
authors = ["jmabry <joshua.mabry@bain.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
ipdb = "^0.13.13"
jekyllnb = "^0.3.1"
lxml = {extras = ["html-clean"], version = "^5.2.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
